# liquidcss-scout

./: .liquidcss-scout.yml  README.md  pyproject.toml
src/liquidcss_scout/: __init__.py  cli.py  config.py  css_parser.py  discover.py  pruner.py  scanner.py
tests/: test_basic.py
